# scx

./: .Rprofile  .gitignore  .release-please-manifest.json  AGENTS.md  Cargo.toml  README.md  pixi.toml  release-please-config.json  rproject.toml
.github/workflows/: ci.yml  conda-package.yml  release-please.yml
conda.recipe/: recipe.yaml
crates/scx-cli/: Cargo.toml
crates/scx-cli/src/: main.rs
crates/scx-cli/tests/: bpcells.rs  inspect.rs
crates/scx-core/: Cargo.toml
crates/scx-core/benches/: conversion.rs
crates/scx-core/src/: bpcells.rs  detect.rs  dtype.rs  error.rs  h5.rs  h5ad.rs  h5bpcells.rs  h5seurat.rs  ir.rs  lib.rs  npy.rs  provenance.rs  sparse.rs  stream.rs  validate.rs
crates/scx-core/tests/: bpcells_compat.rs
docs/: bpcells-compat.md  design.md  lazy-api-patterns.md  mvp-plan.md  npy-format.md  provenance.md  roadmap.md  spec.md  testing.md  validation.md
python/picklerick/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/picklerick/rust/: Cargo.toml
python/picklerick/rust/src/: lib.rs
python/picklerick/src/picklerick/: __init__.py  _api.py  _cli.py  _exceptions.py  _io.py  _native.py  _util.py
python/picklerick/tests/: conftest.py  test_convert.py  test_native.py  test_read.py  test_write.py
r/picklerick/: DESCRIPTION  LICENSE  NAMESPACE  README.md
r/picklerick/R/: convert.R  extendr-wrappers.R  read.R  write.R  zzz.R
r/picklerick/docs/: usage.md
r/picklerick/src/: Makevars  entrypoint.c
r/picklerick/src/rust/: Cargo.toml
r/picklerick/src/rust/src/: lib.rs
r/picklerick/tests/: testthat.R
r/picklerick/tests/testthat/: helper-fixtures.R  helper.R  test-convert.R  test-read.R
scripts/: benchmark_compare.sh  download_large.sh  prepare_bpcells_fixtures.R  prepare_bpcells_h5seurat.R  prepare_h5ad_reference.R  prepare_h5seurat_test.R  prepare_norman_subset.py  prepare_test_data.R
tests/fixtures/: norman_subset.h5ad
tests/golden/bpcells/: manifest.json
tests/golden/bpcells/synth_128_boundary/: idxptr  index_data  index_idx  row_names  shape  val  val_data  val_idx
tests/golden/bpcells/synth_256_boundary/: idxptr  index_data  index_idx  index_starts  row_names  shape  val  val_data  val_idx  val_idx_offsets
tests/golden/bpcells/synth_empty/: idxptr  index_starts  val  val_idx_offsets  version
tests/golden/bpcells/synth_large_vals/: idxptr  index_data  shape  val  val_data  val_idx
tests/golden/bpcells/synth_one_col/: index_data  shape  val  val_data
tests/golden/bpcells/synth_packed_double_csc/: val
tests/golden/bpcells/synth_packed_float_csc/: idxptr  shape  val  version
tests/golden/bpcells/synth_packed_uint_csc/: index_data  val  val_data
tests/golden/bpcells/synth_packed_uint_csr/: idxptr  index_data  index_idx  val  val_data
tests/golden/bpcells/synth_unpacked_uint_csc/: index  val  version
tests/python/: conftest.py  test_matrix.py  test_obs.py  test_obsm.py  test_shape.py  test_var.py
tests/r/: helper-fixtures.R  test-coldata.R  test-matrix.R  test-reduceddims.R  test-shape.R
