[package]
name = "scx-core"
version = "0.1.0"
edition = "2021"
description = "Streaming interop engine for single-cell data"

[dependencies]
async-trait = "0.1"
futures = "0.3"
hdf5 = "0.8"
ndarray = "0.15"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "conversion"
harness = false
