[package]
name    = "picklerick-r"
version = "0.0.3"
edition = "2021"

# This crate is NOT part of the top-level Cargo workspace.
# It is compiled separately by R's build system (src/Makevars.in) when
# native bindings are activated.  Path dependency reaches up to scx-core
# in the parent workspace.
[workspace]

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.7"
scx-core    = { path = "../../../../crates/scx-core" }
tokio       = { version = "1", features = ["rt"] }
futures     = "0.3"
anyhow      = "1"
# Dynamic system HDF5.  Static HDF5 (hdf5-sys features=["static","zlib"]) was
# tried but libz-sys >= 1.1 builds zlib-ng with -DZ_SOLO, which rejects the
# NULL zalloc/zfree that HDF5's H5Z_filter_deflate passes → inflateInit() fails.
# See docs/roadmap.md §0.0.6 "Static-linking investigation" for full details.
# TODO 0.0.6: test whether dynamic HDF5 + rhdf5 co-existence is safe in practice.

[profile.release]
lto           = true
codegen-units = 1
